tests/ui/fixtures/pod-httpbin-sleep.yaml
apiVersion: v1
kind: Pod
metadata:
  name: placeholderName
  namespace: placeholderNamespace
  labels:
    app: placeholderName
spec:
  containers:
    - name: test-container
      image: docker.io/mccutchen/go-httpbin:v2.15.0
      command: ["/bin/sh", "-c"]
      args:
        - while true; do sleep 1; done;
